# FastapiUsersTemplate

./: docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/versions/: 2025_04_13_0036-f569fce560fb_init.py  2025_04_13_0039-45e816ebc5c2_init1.py
src/api/v1/: __init__.py  auth.py  fastapi_users.py  users.py
src/core/: config.py
src/core/authentication/: user_manager.py
src/core/db/: db_helper.py
src/core/dependencies/: __init__.py  session.py
src/core/dependencies/authentication/: __init__.py  access_token.py  strategy.py  user.py  users.py
src/core/models/: __init__.py  base.py  tokens.py  users.py
src/core/schemas/: user.py  users.py
src/crud/: users.py
