[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.11.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"
asyncpg = "^0.30.0"
fastapi-users = {extras = ["sqlachemy"], version = "^14.0.1"}
pydantic-settings = "^2.8.1"



[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

